@@ -1,11 +1,11 @@
                         #//////////////////////////////////////#
                         #                                      #
-                        ###      CALCULADORA DE DIVISAS    ###    
+                        ###       CONVERSOR DE DIVISAS       ###    
                         #                                      #
                         #//////////////////////////////////////#
 
 
-#CALCULADORA DE DIVISAS v0.0.7
+#CONVERSOR DE DIVISAS v0.1.0
 
 #Esta aplicación multiplataforma (Windows, Linux, Mac) convierte una cantidad de una moneda en codigo ISO, por ejemplo EUR (euros), en el valor correspondiente en otra divisa, por ejemplo USD (dolares americanos), y opera mediante interfaz gráfica. 
 # Toma los datos para el cambio en tiempo real mediante API.
@@ -13,27 +13,30 @@
 # ©2023 Calculadora de divisas GUI de Juan Fuente
 
 """
-Novedades de la versión 0.0.7
-- Se añade color a la opcion mostrada en el combobox despues de haber sido seleccionada
-- Se cambia el texto del botón a "Convertir"
-- Se añade el borrado del 1 por defecto al hacer click en la ventana de cantidad cuando el usuario quiere introducir su cantidad deseada
-- Se eliminan todas las líneas innecesarias
-- Se comienza a pulir la documentación
+Novedades de la version 1.0
+- Eliminacion de lista de divisas de prueba e implementacion de la llamada a la API para obtener valores de conversión en tiempo real
+- Se termina la documentacion
+- Se oculta la api key en el .env
+- Se añade manual y EULA
 """
 
 
 import tkinter as tk
 from tkinter import messagebox  #se importa messagebox para mostrar mensaje de error
 from tkinter import ttk #ttk es necesario para los desplegables combobox 
+import requests #se necesita requests instalado con pip para hacer llamada a la API de conversion
+from decouple import config #importacion para mantener las claves seguras
 
 class VisualMoney(tk.Tk): 
-    #DICCIONARIO CON EL LISTADO DE DIVISAS PARA PRUEBAS Y NO GASTAR LAS LLAMADAS A LA API, que tiene llamadas limitadas mensuales
-    divisas = {'success': True, 'timestamp': 1686316503, 'base': 'EUR', 'date': '2023-06-09', 'rates': {'AED': 3.954746, 'AFN': 92.174953, 'ALL': 105.694703, 'AMD': 
-    415.806427, 'ANG': 1.939294, 'AOA': 659.488358, 'ARS': 263.747758, 'AUD': 1.59867, 'AWG': 1.938089, 'AZN': 1.88214, 'BAM': 1.955693, 'BBD': 2.172681, 'BDT': 116.493621, 'BGN': 1.955821, 'BHD': 0.405957, 'BIF': 3038.061864, 'BMD': 1.076716, 'BND': 1.446334, 'BOB': 7.435627, 'BRL': 5.278811, 'BSD': 1.076041, 'BTC': 4.0336908e-05, 'BTN': 88.728254, 'BWP': 14.483341, 'BYN': 2.716051, 'BYR': 21103.634453, 'BZD': 2.168981, 'CAD': 1.437653, 'CDF': 2549.663112, 'CHF': 0.970111, 'CLF': 0.030721, 'CLP': 847.688109, 'CNY': 7.677631, 'COP': 4483.725551, 'CRC': 579.270972, 'CUC': 1.076716, 'CUP': 28.532975, 'CVE': 110.263962, 'CZK': 23.674778, 'DJF': 191.591289, 'DKK': 7.450519, 'DOP': 59.03759, 'DZD': 146.73382, 'EGP': 33.330928, 'ERN': 16.150741, 'ETB': 58.536867, 'EUR': 1, 'FJD': 2.391708, 'FKP': 0.858216, 'GBP': 0.85628, 'GEL': 2.81017, 'GGP': 0.858216, 'GHS': 12.159391, 'GIP': 0.858216, 'GMD': 64.011362, 'GNF': 9252.493372, 'GTQ': 8.425539, 'GYD': 227.588595, 'HKD': 8.440086, 'HNL': 26.47955, 'HRK': 7.477083, 'HTG': 150.111781, 'HUF': 368.211064, 'IDR': 15990.902156, 'ILS': 3.87066, 'IMP': 0.858216, 'INR': 88.775781, 'IQD': 1409.622815, 'IRR': 45491.252933, 'ISK': 149.491477, 'JEP': 0.858216, 'JMD': 166.643197, 'JOD': 0.76382, 'JPY': 149.893406, 'KES': 149.802942, 'KGS': 94.298361, 'KHR': 4442.818624, 'KMF': 491.897857, 'KPW': 969.07606, 'KRW': 
-    1389.512698, 'KWD': 0.33081, 'KYD': 0.896759, 'KZT': 480.370389, 'LAK': 19547.020458, 'LBP': 16151.7906, 'LKR': 319.612499, 'LRD': 184.388113, 'LSL': 20.489417, 'LTL': 3.179263, 'LVL': 0.651295, 'LYD': 5.197715, 'MAD': 10.843357, 'MDL': 19.192038, 'MGA': 4761.761378, 'MKD': 61.516632, 'MMK': 2259.797251, 'MNT': 3732.624381, 'MOP': 8.689965, 'MRO': 384.387442, 'MUR': 48.829441, 'MVR': 16.538239, 'MWK': 1104.544649, 'MXN': 18.64355, 'MYR': 4.967996, 'MZN': 68.102228, 'NAD': 20.285057, 'NGN': 497.818133, 'NIO': 39.357845, 'NOK': 11.625658, 'NPR': 141.966204, 'NZD': 1.756975, 'OMR': 0.414517, 'PAB': 1.076041, 'PEN': 3.932639, 'PGK': 3.818844, 'PHP': 60.331661, 'PKR': 308.835292, 'PLN': 4.451559, 'PYG': 7795.681745, 'QAR': 3.920432, 'RON': 4.956133, 
-    'RSD': 117.227447, 'RUB': 88.76767, 'RWF': 1220.944486, 'SAR': 4.038179, 'SBD': 8.992057, 'SCR': 14.158592, 'SDG': 646.503877, 'SEK': 11.663053, 'SGD': 1.446272, 'SHP': 1.310094, 'SLE': 24.323726, 'SLL': 21265.141813, 'SOS': 613.198711, 'SRD': 40.425316, 'STD': 22285.84822, 'SVC': 9.415484, 'SYP': 2705.350153, 'SZL': 20.174895, 'THB': 37.231225, 'TJS': 11.75622, 'TMT': 3.768506, 'TND': 3.340513, 'TOP': 2.541375, 'TRY': 25.160808, 'TTD': 7.291635, 'TWD': 33.0975, 'TZS': 2557.200547, 'UAH': 39.741278, 'UGX': 4002.780824, 'USD': 1.076716, 'UYU': 41.937704, 'UZS': 12293.326869, 'VEF': 2871018.449141, 
-    'VES': 29.958053, 'VND': 25281.292702, 'VUV': 128.704654, 'WST': 2.960564, 'XAF': 655.927176, 'XAG': 0.044423, 'XAU': 0.000548, 'XCD': 2.909879, 'XDR': 0.808956, 'XOF': 655.921085, 'XPF': 119.65572, 'YER': 269.506834, 'ZAR': 20.148437, 'ZMK': 9691.734826, 'ZMW': 21.655915, 'ZWL': 346.702127}}
+    
+                            #BLOQUE DE CAPTURA DE DATOS MEDIANTE API
+    api_key = config("API_KEY")      
+    url = f"http://api.exchangeratesapi.io/v1/latest?access_key={api_key}" #url que sirve los datos
 
+    json_divisas = requests.get(url) #se realiza la llamada a los datos de la url de la api
+    divisas = json_divisas.json() #se guardan los datos de las conversiones en un archivo json
+
+    print(divisas)    
     keys = list(divisas['rates'].keys()) #se cogen los nombres de las divisas y se meten en una lista donde poder comparar si están las elegidas por el usuario
 
     #diccionario de divisas ordenadas alfabeticamente por su nombre en castellano, de aqui se obtiene el indice para obtener el valor correspondiente en el diccionario divisas
@@ -242,6 +245,7 @@ Elija de los desplegables la moneda de origen y la moneda de destino.
         self.nombre_moneda_origen.bind("<<ComboboxSelected>>", self.calcular_resultado) #se asocia el combobox nombre_moneda_origen con la funcion calcular_resultado
         self.nombre_moneda_destino.bind("<<ComboboxSelected>>", self.calcular_resultado)#se asocia el combobox nombre_moneda_destino con la funcion calcular_resultado
 
+    
     def calcular_divisa(self, cantidad_moneda, codigo_moneda_origen, codigo_moneda_destino):#funcion que realiza el calculo de la conversion de divisas
         if codigo_moneda_origen in self.divisas['rates'] and codigo_moneda_destino in self.divisas['rates']:#evalua si la moneda origen y la destino estan dentro de las posibles opciones
             tasa_moneda_origen = self.divisas['rates'][codigo_moneda_origen]#se coge el valor de la moneda origen con respecto al euro  
@@ -251,34 +255,34 @@ Elija de los desplegables la moneda de origen y la moneda de destino.
         else:
             return "Error: Moneda no encontrada" #devuelve mensaje en caso de no ser una opcion valida
 
-    def calcular_resultado(self, event=None):
+    def calcular_resultado(self, event=None):#funcion para relizar los calculos de conversion entre ambas monedas
         cantidad = self.cantidad_moneda.get()
 
-        if not cantidad:
-            cantidad = "1"
-            self.cantidad_moneda.insert(tk.END, "1")
+        if not cantidad: #en caso de no haber seleccionado aun una cantidad de moneda se da valor 1 por defecto
+            cantidad = "1" #se asigna el valor 1
+            self.cantidad_moneda.insert(tk.END, "1") #se inserta el valor 1 en la pantalla
 
         try:
-            cantidad = float(cantidad)
+            cantidad = float(cantidad) #se hace intento de convertir a float los datos introducidos
         except ValueError:
-            self.pantalla.delete(0, tk.END)
+            self.pantalla.delete(0, tk.END) #si hay un error en los datos se borra la pantalla
             return
-
-        nombre_moneda_origen = self.nombre_moneda_origen.get()
+        #se obtiene el valor para ambas monedas
+        nombre_moneda_origen = self.nombre_moneda_origen.get() 
         nombre_moneda_destino = self.nombre_moneda_destino.get()
 
-        if not nombre_moneda_origen or not nombre_moneda_destino:
-            if event is None or (event.widget == self.calcular_button if event else False):
+        if not nombre_moneda_origen or not nombre_moneda_destino:#se evalua si alguna de las monedas aun no ha sido seleccionada
+            if event is None or (event.widget == self.calcular_button if event else False):#se evalua que se este intentando calcular el cambio faltando una moneda
                 tk.messagebox.showerror("Error", "Por favor, seleccione la moneda de origen y la moneda de destino.")
                 return
-
+        #se toman los codigos correspodientes de cada moneda
         codigo_moneda_origen = self.diccionario_currencies[nombre_moneda_origen]
         codigo_moneda_destino = self.diccionario_currencies[nombre_moneda_destino]
 
-        resultado = self.calcular_divisa(cantidad, codigo_moneda_origen, codigo_moneda_destino)
-        self.pantalla.delete(0, tk.END)
-        self.pantalla.insert(tk.END, resultado)
+        resultado = self.calcular_divisa(cantidad, codigo_moneda_origen, codigo_moneda_destino) #se realizan los calculos de conversion haciendo la llamada a la funcion
+        self.pantalla.delete(0, tk.END) #se borran los datos anteriores
+        self.pantalla.insert(tk.END, resultado) #se imprimen los nuevos datos
 
-if __name__ == "__main__":
+if __name__ == "__main__": #proporciona la opcion de ejecutar la app como un componente o standalone
     ventana = VisualMoney()
     ventana.mainloop()
